// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VotesHeader > should render a different title if on select delegate step 1`] = `
<DocumentFragment>
  <section
    class="h-13 flex w-full items-center justify-between bg-theme-secondary-100 px-8 py-1.5 dark:bg-black"
  >
    <h1
      class="mb-0 text-lg"
    >
      Select Delegate
    </h1>
    <div
      class="flex items-center text-theme-primary-200"
    >
      <div
        class="relative -my-2"
        data-testid="HeaderSearchBar"
      >
        <div
          class="group"
        >
          <button
            class="ring-focus css-46sfhd"
            type="button"
          >
            <div
              class="flex h-5 items-center gap-2"
            >
              <span
                class="hidden md:block"
              >
                Search
              </span>
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  fill="none"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    clip-path="url(#clip0_13375_36442)"
                    id="Vertical container"
                  >
                    <g
                      id="Vertical container_2"
                    >
                      <path
                        d="M10.5038 13.9035C13.7838 12.5435 15.3038 8.70355 13.9438 5.50355C12.5838 2.22355 8.74379 0.783547 5.54379 2.06355C2.34379 3.34355 0.743788 7.26355 2.10379 10.4635C3.54379 13.7435 7.22379 15.2635 10.5038 13.9035Z"
                        id="Vector"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.6"
                      />
                      <path
                        d="M12.8281 12.7832L14.4281 14.3832"
                        id="Vector_2"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.6"
                      />
                    </g>
                  </g>
                  <defs>
                    <clippath
                      id="clip0_13375_36442"
                    >
                      <rect
                        fill="transparent"
                        height="16"
                        width="16"
                      />
                    </clippath>
                  </defs>
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <span
        class="mx-0.5 flex md:mx-3.5"
      >
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-3y8nng"
          type="vertical"
        />
      </span>
      <div
        data-testid="Votes__FilterWallets"
      >
        <div
          aria-expanded="false"
          aria-haspopup="dialog"
          data-testid="dropdown__toggle"
        >
          <div
            class="group"
          >
            <button
              class="ring-focus -mr-2.5 px-2.5 css-46sfhd"
            >
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    clip-path="url(#clip0_13768_41214)"
                  >
                    <path
                      d="M9.75946 11.5209V8.00094L14.6395 3.12094C14.9595 2.80094 15.1195 2.24094 14.8795 1.76094C14.7195 1.28094 14.2395 0.960938 13.7595 0.960938H2.23946C1.75946 0.960938 1.27946 1.28094 1.11946 1.76094C0.879462 2.24094 1.03946 2.72094 1.35946 3.12094L6.23946 8.00094V15.0409L9.75946 11.5209Z"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="1.6"
                    />
                  </g>
                  <defs>
                    <clippath
                      id="clip0_13768_41214"
                    >
                      <rect
                        fill="white"
                        height="16"
                        width="16"
                      />
                    </clippath>
                  </defs>
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`VotesHeader > should render responsive (md) 1`] = `
<DocumentFragment>
  <div
    class="w-full py-4 first:pt-8 last:pb-8 border-theme-secondary-300 dark:border-theme-secondary-800 hasBorder css-1wpbo18"
  >
    <div
      class="mx-auto px-6 lg:container md:px-10"
    >
      <div
        class="flex items-end justify-between bg-theme-background"
      >
        <div
          class="space-y-2"
        >
          <div
            class="flex items-center gap-3"
          >
            <h1
              class="mb-0 text-2xl leading-[29px]"
              data-testid="header__title"
            >
              My Votes
            </h1>
          </div>
          <div
            class="flex items-center leading-5 text-theme-secondary-text"
            data-testid="header__subtitle"
          >
            Manage your cryptoasset staking.
          </div>
        </div>
        <div>
          <div
            class="flex items-center text-theme-primary-200"
          >
            <div
              class="relative -my-2"
              data-testid="HeaderSearchBar"
            >
              <div
                class="group"
              >
                <button
                  class="ring-focus css-46sfhd"
                  type="button"
                >
                  <div
                    class="flex h-5 items-center gap-2"
                  >
                    <span
                      class="hidden md:block"
                    >
                      Search
                    </span>
                    <div
                      class="css-1i4b0eq"
                      height="20"
                      width="20"
                    >
                      <svg
                        fill="none"
                        viewBox="0 0 16 16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          clip-path="url(#clip0_13375_36442)"
                          id="Vertical container"
                        >
                          <g
                            id="Vertical container_2"
                          >
                            <path
                              d="M10.5038 13.9035C13.7838 12.5435 15.3038 8.70355 13.9438 5.50355C12.5838 2.22355 8.74379 0.783547 5.54379 2.06355C2.34379 3.34355 0.743788 7.26355 2.10379 10.4635C3.54379 13.7435 7.22379 15.2635 10.5038 13.9035Z"
                              id="Vector"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="1.6"
                            />
                            <path
                              d="M12.8281 12.7832L14.4281 14.3832"
                              id="Vector_2"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="1.6"
                            />
                          </g>
                        </g>
                        <defs>
                          <clippath
                            id="clip0_13375_36442"
                          >
                            <rect
                              fill="transparent"
                              height="16"
                              width="16"
                            />
                          </clippath>
                        </defs>
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <span
              class="mx-0.5 flex md:mx-3.5"
            >
              <div
                class="border-theme-secondary-300 dark:border-theme-secondary-800 css-3y8nng"
                type="vertical"
              />
            </span>
            <div
              data-testid="Votes__FilterWallets"
            >
              <div
                aria-expanded="false"
                aria-haspopup="dialog"
                data-testid="dropdown__toggle"
              >
                <div
                  class="group"
                >
                  <button
                    class="ring-focus css-46sfhd"
                  >
                    <div
                      class="css-1i4b0eq"
                      height="20"
                      width="20"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          clip-path="url(#clip0_13768_41214)"
                        >
                          <path
                            d="M9.75946 11.5209V8.00094L14.6395 3.12094C14.9595 2.80094 15.1195 2.24094 14.8795 1.76094C14.7195 1.28094 14.2395 0.960938 13.7595 0.960938H2.23946C1.75946 0.960938 1.27946 1.28094 1.11946 1.76094C0.879462 2.24094 1.03946 2.72094 1.35946 3.12094L6.23946 8.00094V15.0409L9.75946 11.5209Z"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="1.6"
                          />
                        </g>
                        <defs>
                          <clippath
                            id="clip0_13768_41214"
                          >
                            <rect
                              fill="white"
                              height="16"
                              width="16"
                            />
                          </clippath>
                        </defs>
                      </svg>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesHeader > should render responsive (xs) 1`] = `
<DocumentFragment>
  <section
    class="h-13 flex w-full items-center justify-between bg-theme-secondary-100 px-8 py-1.5 dark:bg-black"
  >
    <h1
      class="mb-0 text-lg"
    >
      My Votes
    </h1>
    <div
      class="flex items-center text-theme-primary-200"
    >
      <div
        class="relative -my-2"
        data-testid="HeaderSearchBar"
      >
        <div
          class="group"
        >
          <button
            class="ring-focus css-46sfhd"
            type="button"
          >
            <div
              class="flex h-5 items-center gap-2"
            >
              <span
                class="hidden md:block"
              >
                Search
              </span>
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  fill="none"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    clip-path="url(#clip0_13375_36442)"
                    id="Vertical container"
                  >
                    <g
                      id="Vertical container_2"
                    >
                      <path
                        d="M10.5038 13.9035C13.7838 12.5435 15.3038 8.70355 13.9438 5.50355C12.5838 2.22355 8.74379 0.783547 5.54379 2.06355C2.34379 3.34355 0.743788 7.26355 2.10379 10.4635C3.54379 13.7435 7.22379 15.2635 10.5038 13.9035Z"
                        id="Vector"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.6"
                      />
                      <path
                        d="M12.8281 12.7832L14.4281 14.3832"
                        id="Vector_2"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.6"
                      />
                    </g>
                  </g>
                  <defs>
                    <clippath
                      id="clip0_13375_36442"
                    >
                      <rect
                        fill="transparent"
                        height="16"
                        width="16"
                      />
                    </clippath>
                  </defs>
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <span
        class="mx-0.5 flex md:mx-3.5"
      >
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-3y8nng"
          type="vertical"
        />
      </span>
      <div
        data-testid="Votes__FilterWallets"
      >
        <div
          aria-expanded="false"
          aria-haspopup="dialog"
          data-testid="dropdown__toggle"
        >
          <div
            class="group"
          >
            <button
              class="ring-focus -mr-2.5 px-2.5 css-46sfhd"
            >
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    clip-path="url(#clip0_13768_41214)"
                  >
                    <path
                      d="M9.75946 11.5209V8.00094L14.6395 3.12094C14.9595 2.80094 15.1195 2.24094 14.8795 1.76094C14.7195 1.28094 14.2395 0.960938 13.7595 0.960938H2.23946C1.75946 0.960938 1.27946 1.28094 1.11946 1.76094C0.879462 2.24094 1.03946 2.72094 1.35946 3.12094L6.23946 8.00094V15.0409L9.75946 11.5209Z"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="1.6"
                    />
                  </g>
                  <defs>
                    <clippath
                      id="clip0_13768_41214"
                    >
                      <rect
                        fill="white"
                        height="16"
                        width="16"
                      />
                    </clippath>
                  </defs>
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
